# EPL-predictions-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  docker-compose.yml  myused models.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  config.py  params.yaml
notebooks/: data_loader.ipynb  feature_extraction.py  feature_selection.ipynb  feature_selection_summary.txt  ml.ipynb
pipelines/: README.md  __init__.py  config.py  data_discovery.py  helpers.py  hooks.py  prefect_config.py  training_pipeline.py
pipelines/data_ingestion/: __init__.py  data_ingestion_aws.py  data_ingestion_backfills.py  data_ingestion_common_tasks.py  data_ingestion_local.py
pipelines/training/: training_pipeline.py
pipelines/utils/: __init__.py  helpers.py  hooks.py  schema_analysis.py
reports/: EPL_Feature_Selection_Report.html  data_summary_report.html
src/app/: main.py
src/core/: config.py  required_columns.json
src/models/: DivisionEnum.py
src/models/data_store/: IDataStore.py
src/models/data_store/providers/: local_data_store.py  s3_store.py
terraform/: backend.tf  main.tf  monitoring.tf  outputs.tf  providers.tf  terraform.tf
terraform/scripts/: database_check.sh  user_data.sh
tests/functional/: conftest.py
tests/functional/pipelines/: test_data_ingestion_pipeline.py
tests/unit/: conftest.py
tests/unit/pipelines/: test_data_ingestion_aws.py  test_data_ingestion_common_tasks.py  test_data_ingestion_local.py  test_data_ingestion_pipeline_data_clean.py  test_data_ingestion_pipeline_database.py  test_data_ingestion_pipeline_s3.py  test_data_ingestion_pipeline_season.py  test_data_ingestion_pipelines_ingestion.py
